# Airtight-

./: .env.example  .gitignore  CLAUDE.md  README.md  SUBMISSION.md  conftest.py  pyproject.toml  requirements-lock.txt  requirements.txt
agent/: README.md  distill.py  episodes.py  ingest.py  loop.py  memory.py  poison_demo.py  policy_advisor.py  prior_art.py  run_smoke.py  statute_monitor.py  statute_reference.py  subagents.py
airtight/: __init__.py  config.py  doorway.py  guardrails.py  shapes.py  stubs.py
attic/: README.md  config.py  test_extractor.py
containment/: README.md  demo.py  openshell_sim.py  policy.py
data/: README.md  assemble_eval.py  distill_loopholes.py  poison_builder.py  pull_uspto.py
db/: schema.sql
docs/: ARCHITECTURE.md  BUILD-PLAN.md  COSTS.md  DEMO-RUNBOOK.md  GPU-RERUN-RUNBOOK.md  INFERENCE-LOCAL.md  INTEGRATION-STATUS.md  JUDGING-RUBRIC.md  MOVE-TO-CLAUDE-CODE.md  RECURSION-EVIDENCE.md  SESSIONS.md  THROUGHPUT.md  UI-DESIGN-BRIEF.md  UPDATES.md  WORKSTREAMS.md  airtight-spec.html
inference/: RUNBOOK.md  verify_endpoint.py  vllm_modal.py
research/: hiddenlayer.md  nemoclaw-openshell.md  nemotron.md  vllm.md
runtime/: .env.example  README.md  RUNBOOK.md  bench.py  gateway_smoke.py  inference_gateway.py  inference_local.py  mock_endpoint.py  modal-deploy.sh  modal_app.py  nano_v3_reasoning_parser.py  requirements.txt  serve-nim.sh  serve-vllm.sh  verify.sh
scripts/: bigquery_export.sql  build_corpus.py  build_groundtruth.py  build_poison.py  demo.sh  run_ingestion.py  seed_memory.py  validate_fixtures.py  verify_live.py
(+420 files in other folders)
