[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "airtight"
version = "0.1.0"
description = "Airtight - automated patent platform (hackathon build)"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
hl = ["hiddenlayer-sdk"]  # only needed with AIRTIGHT_HL_ENABLED=true

[tool.setuptools]
packages = ["airtight", "agent", "agent.eval", "containment"]
